# TP-Final-Jogos

./: CMakeLists.txt  README.md
Assets/Levels/: level1-1.csv  level1-1.tmx  level1-2.csv  level1-2.tmx  level1.csv  level1.tmx  level2.csv  level2.tmx  level3.csv
Assets/Sprites/Mouse/: Mouse.json
Source/: AudioSystem.cpp  Game.cpp  Game.h  HUD.cpp  HUD.h  Main.cpp
Source/Actors/: Block.cpp  Cheese.cpp  Cheese.h  Coin.cpp  Coin.h  Exit.cpp  Exit.h  Mario.cpp  Mario.h  Mouse.cpp  Mouse.h
Source/Components/: RigidBodyComponent.cpp
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h
Source/UIElements/: UIButton.cpp  UIFont.cpp  UIImage.cpp  UIImage.h  UIScreen.cpp  UIText.cpp
